# ChangeLog for net-misc/curl
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/curl/ChangeLog,v 1.193 2011/11/14 17:10:55 angelos Exp $

  14 Nov 2011; Christoph Mende <angelos@gentoo.org> curl-7.22.0.ebuild:
  Prefer openssl over nss

*curl-7.22.0 (17 Sep 2011)

  17 Sep 2011; Christoph Mende <angelos@gentoo.org> +curl-7.22.0.ebuild:
  Version bump

  21 Aug 2011; Christoph Mende <angelos@gentoo.org>
  +files/curl-respect-cflags-3.patch, curl-7.21.7-r2.ebuild:
  Block USE=gnutls with USE=nss (bug #379541) and fix CFLAGS patch (bug
  #379533)

  23 Jul 2011; Christoph Mende <angelos@gentoo.org> curl-7.21.7.ebuild,
  curl-7.21.7-r2.ebuild, +files/curl-7.21.7-examples-fix-headers.patch:
  Fix test suite (bug #376025)

*curl-7.21.7-r2 (21 Jul 2011)

  21 Jul 2011; Christoph Mende <angelos@gentoo.org> -curl-7.21.7-r1.ebuild,
  +curl-7.21.7-r2.ebuild, files/curlbuild.h.ed:
  Fix curlbuild.h header on x86

  21 Jul 2011; Kacper Kowalik <xarthisius@gentoo.org> curl-7.21.7.ebuild:
  ppc/ppc64 stable wrt #373235

*curl-7.21.7-r1 (21 Jul 2011)

  21 Jul 2011; Christoph Mende <angelos@gentoo.org> +curl-7.21.7-r1.ebuild,
  +files/config.h.ed, +files/curlbuild.h.ed:
  Fix cross compilation with differing long integer sizes (bug #365375)

  21 Jul 2011; Christoph Mende <angelos@gentoo.org> curl-7.21.7.ebuild:
  Bump c-ares dep to 1.6 (bug #369501)

*curl-7.21.7 (20 Jul 2011)

  20 Jul 2011; Christoph Mende <angelos@gentoo.org>
  +files/curl-respect-cflags-2.patch, +curl-7.21.7.ebuild, metadata.xml:
  Version bump and take over maintainership

  20 Jul 2011; Pacho Ramos <pacho@gentoo.org> metadata.xml:
  Drop maintainer due retirement, bug #34534

  12 Jun 2011; Tomáš Chvátal <scarabeus@gentoo.org> -curl-7.20.0-r2.ebuild,
  -files/curl-7.20.0-libcurlm4.patch, -files/curl-7.21.3-buffer-overflow.patch:
  Remove overshadowed old version and patches.

  12 Jun 2011; Raúl Porcel <armin76@gentoo.org> curl-7.21.4.ebuild: