@@ -1,6 +1,12 @@
 # ChangeLog for net-misc/curl
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/curl/ChangeLog,v 1.193 2011/11/14 17:10:55 angelos Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/curl/ChangeLog,v 1.194 2011/12/01 18:35:02 vapier Exp $
+
+*curl-7.23.1 (01 Dec 2011)
+
+  01 Dec 2011; Mike Frysinger <vapier@gentoo.org> +curl-7.23.1.ebuild:
+  Version bump. Should include fix for #387641 by Tim Harder and for #382241 by
+  Alessandro Surace.
 
   14 Nov 2011; Christoph Mende <angelos@gentoo.org> curl-7.22.0.ebuild:
   Prefer openssl over nss
